@@ -518,6 +518,14 @@ AC_ARG_ENABLE(pthread,
 
 dnl Checks for libraries.
 case "$target_os" in
+*bsd*|dragonfly*)
+    ;;
+*)
+    ac_cv_func_daemon=no
+    ;;
+esac
+
+case "$target_os" in
 nextstep*)	;;
 openstep*)	;;
 rhapsody*)	;;
@@ -531,7 +539,6 @@ darwin*)	LIBS="-lobjc $LIBS"
 		    ],
 		    [
 		    ac_cv_header_ucontext_h=no
-		    ac_cv_func_daemon=no
 		    ],
 		    [
 		    AC_DEFINE(BROKEN_SETREUID, 1)
